restapi-ui-k8s/restapi-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restapi-ui-deployment
  labels:
    app: restapi-ui
spec:
  replicas: 3
  selector:
    matchLabels:
      app: restapi-ui
  template:
    metadata:
      labels:
        app: restapi-ui
    spec:
      containers:
      - name: ui 
        image: viveksinghggits/ui:prep
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
