restapi-ui-k8s/restapi-ui-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: restapi-ui-service
spec:
  selector:
    app: restapi-ui
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
