restapi-ui-k8s/restapi-ui-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: restapi-ui-ing
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: restapi-ui-service
          servicePort: 8080
